[package]
name = "i2p_client"
version = "0.0.20"
authors = ["Brian Taylor <brian@resolvingarchitecture.io>"]
license-file = "LICENSE"
edition = "2018"
description = "A SAMv3 I2P client for the local I2P router instance."
homepage = "https://resolvingarchitecture.io"
documentation = "https://github.com/resolvingarchitecture/i2p-client"
repository = "https://github.com/resolvingarchitecture/i2p-client"
publish = true
readme = "README.md"
keywords = ["i2p","i2p-client"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simple_logger = "1.6.0"
nom = "^2.2"
dirs = "2.0.2"
base64 = "0.12.0"
clap = {version = "2.33.0", features = ["yaml"]}

ra_common = "0.1.3"

#i2p = "0.0.1"
#ire = "0.0.1"

[dev-dependencies]
assert_cmd = "0.10"

[package.metadata.deb]
maintainer = "Brian Taylor <brian@resolvingarchitecture.io>"
copyright = "Unlicense"
license-file = ["LICENSE","0"]
extended-description = """\
A SAMv3 I2P client for the local I2P router instance. Provides \
a CLI and a Service option that can be ran within the RA Service Bus."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/i2p_client", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/i2p_client/README", "644"],
]